<resources>
    <string name="app_name">pw</string>
    <string name="recent">Recent</string>
    <string name="domains_and_users"><![CDATA[Domains & Users]]></string>
    <string name="sequences">Sequences</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="home">Home</string>
    <string name="settings">Settings</string>
    <string name="pw_android">pw-android</string>
    <string name="open">open</string>
    <string name="close">close</string>
    <string name="new_password">add domain or user</string>
    <string name="domain">Domain</string>
    <string name="user">User</string>
    <string name="key">Key</string>
    <string name="good_password">good_password</string>
    <string name="sequence">Sequence</string>
    <string name="generate">Generate</string>
    <string name="generate_password">Generate Password</string>
    <string name="password_copied_tap_to_show">password copied, tap to show</string>
    <string name="something_went_wrong">Something went wrong</string>
    <string name="generated_password">Generated Password</string>
    <string name="no_recent_entries">No recent entries</string>
    <string name="no_entries_found">No entries found</string>
    <string name="sequence_editor">Sequence Editor</string>
    <string name="sequence_name">Sequence Name</string>
    <string name="sequence_code">Sequence Code</string>
    <string name="save">Save</string>
    <string name="default_string">Default</string>
    <string name="cannot_remove_only_default_sequence">Cannot remove only default sequence</string>
    <string name="sequence_is_readonly">Sequence is read-only</string>
    <string name="saved">Saved</string>
    <string name="remove">Remove</string>
    <string name="cannot_remove_default_sequence">Cannot remove default sequence</string>
    <string name="cannot_remove_readonly_sequence">Cannot remove read-only sequence</string>
    <string name="clear_all_domains_and_users"><![CDATA[Clear all Domains & Users]]></string>
    <string name="clear_all_sequences">Clear all Sequences</string>
    <string name="domain_is_empty">Domain %s is empty</string>
    <string name="delete_empty_domain">Delete the empty domain?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="clear_all_recent_users">Clear all recent Users</string>
    <string name="data">Data</string>
    <string name="clear_all_recent_users_description"><![CDATA[Clearing all recent Users empties the Recent tab, but will not affect saved Domains & Users.\nReally clear recent Users?]]></string>
    <string name="clear_all_domains_and_users_description">This will delete all saved Domains and Users.\nReally delete all Domains and Users?</string>
    <string name="clear_all_sequences_description">Clears all non-read-only, non-default sequences.\nReally clear Sequences?</string>
    <string name="recent_users_negative_limit">Recent Users limit must be 0 or more.</string>
    <string name="app">App</string>
    <string name="max_number_of_recent_users">Max. number of recent Users</string>
    <string name="start_on_password_generator">Start on Password Generator</string>
    <string name="start_on_password_generator_description">Start on the Password Generator screen on App start instead of Home</string>
    <string name="about">About</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="version_string_template">pw-android v%s</string>
    <string name="app_description">password generator for android</string>
    <string name="logo">logo</string>
    <string name="license_gpl_3">License: GPL-3</string>
    <string name="source_code_available_at">Source code available at:</string>
    <string name="source_url">https://www.github.com/aesncast/pw-android</string>
    <string name="VERSION">2021.12.10</string>
</resources>