<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@mipmap/ic_launcher"
            android:title="@string/home" />
        <item
            android:id="@+id/nav_password"
            android:icon="@android:drawable/ic_lock_lock"
            android:title="@string/generate_password" />
        <item
            android:id="@+id/nav_sequence"
            android:icon="@android:drawable/ic_lock_lock"
            android:title="@string/sequence_editor" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@mipmap/ic_launcher"
            android:title="@string/settings" />
        <item
            android:id="@+id/nav_about"
            android:icon="@mipmap/ic_launcher"
            android:title="@string/about" />
    </group>
</menu>
