<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AboutFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingStart="20dp"
        android:paddingTop="5dp"
        android:paddingEnd="20dp">

        <TextView
            android:id="@+id/version_text_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/version_string_template" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/app_description" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="128dp"
            android:layout_height="128dp"
            android:layout_marginTop="10dp"
            android:contentDescription="@string/logo"
            android:src="@drawable/icon_round512x512"
            tools:ignore="ImageContrastCheck" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/license_gpl_3" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:linksClickable="false"
            android:text="@string/source_code_available_at" />

        <TextView
            android:id="@+id/sourceLinkTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autoLink="web"
            android:gravity="center"
            android:linksClickable="true"
            android:minHeight="48dp"
            android:text="@string/source_url"
            android:textColor="#00838F"
            android:textColorLink="#00838F" />

    </LinearLayout>
</ScrollView>