<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="20dp"
    android:paddingTop="5dp"
    android:paddingRight="20dp"
    tools:ignore="SpeakableTextPresentCheck"
    tools:context=".SequenceEditorFragment"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/sequence_name_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:labelFor="@id/sequence_name_entry"
            android:text="@string/sequence_name" />

        <AutoCompleteTextView
            android:id="@+id/sequence_name_entry"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:minHeight="48dp"
            tools:ignore="DuplicateSpeakableTextCheck,SpeakableTextPresentCheck" />

        <TextView
            android:id="@+id/sequence_code_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:labelFor="@id/sequence_code_entry"
            android:text="@string/sequence_code" />

        <EditText
            android:id="@+id/sequence_code_entry"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:importantForAutofill="no"
            android:inputType="textMultiLine"
            android:minHeight="48dp"
            android:selectAllOnFocus="false"
            android:singleLine="false"
            android:textSize="12sp"
            android:typeface="monospace"
            tools:ignore="DuplicateSpeakableTextCheck,SpeakableTextPresentCheck" />

        <Switch
            android:id="@+id/sequence_default_switch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:minHeight="48dp"
            android:text="@string/default_string"
            tools:ignore="UseSwitchCompatOrMaterialXml" />

        <Button
            android:id="@+id/sequence_save_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:paddingTop="16dp"
            android:paddingBottom="16dp"
            android:text="@string/save" />
    </LinearLayout>
</ScrollView>
