<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="20dp"
    android:paddingTop="5dp"
    android:paddingRight="20dp"
    tools:context=".PasswordFragment"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/domain_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:labelFor="@id/domain_entry"
            android:text="@string/domain" />

        <AutoCompleteTextView
            android:id="@+id/domain_entry"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:minHeight="48dp"
            android:text=""
            tools:ignore="DuplicateSpeakableTextCheck" />

        <TextView
            android:id="@+id/user_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:labelFor="@id/user_entry"
            android:text="@string/user" />

        <AutoCompleteTextView
            android:id="@+id/user_entry"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:minHeight="48dp"
            android:text=""
            tools:ignore="DuplicateSpeakableTextCheck" />

        <TextView
            android:id="@+id/key_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:labelFor="@id/key_entry"
            android:text="@string/key" />

        <EditText
            android:id="@+id/key_entry"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:autofillHints="password"
            android:ems="10"
            android:importantForAutofill="no"
            android:inputType="textPassword"
            android:minHeight="48dp"
            tools:ignore="DuplicateSpeakableTextCheck" />

        <TextView
            android:id="@+id/sequence_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:labelFor="@id/sequence_entry"
            android:text="@string/sequence" />

        <AutoCompleteTextView
            android:id="@+id/sequence_entry"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:minHeight="48dp"
            tools:ignore="DuplicateSpeakableTextCheck" />

        <Button
            android:id="@+id/password_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:enabled="false"
            android:textAllCaps="false"
            android:textSize="20sp"
            android:textStyle="bold"
            android:typeface="monospace"
            android:visibility="gone"
            tools:ignore="SpeakableTextPresentCheck" />

        <Button
            android:id="@+id/generate_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:paddingTop="16dp"
            android:paddingBottom="16dp"
            android:text="@string/generate" />
    </LinearLayout>
</ScrollView>
